manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysvc
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: microsvcdemo
